--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,101 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f8baff9",
+   "id": "db36bdb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import win32com.client as win32\n",
+    "\n",
+    "excel = win32.gencache.EnsureDispatch(\"Excel.Application\")\n",
+    "excel.Visible = True\n",
+    "\n",
+    "# Open your workbook\n",
+    "wb = excel.Workbooks.Open(r\"FULL_PATH_TO_YOUR_FILE.xlsx\")  # Replace with actual path\n",
+    "\n",
+    "# Delete existing Dashboard sheet if present\n",
+    "for sheet in wb.Sheets:\n",
+    "    if sheet.Name == \"Dashboard\":\n",
+    "        sheet.Delete()\n",
+    "        break\n",
+    "\n",
+    "# Add new Dashboard sheet\n",
+    "dashboard = wb.Sheets.Add()\n",
+    "dashboard.Name = \"Dashboard\"\n",
+    "\n",
+    "# Write title and spacing\n",
+    "dashboard.Range(\"A1\").Value = \"Hybrid Workstyle Dashboard Summary View\"\n",
+    "dashboard.Range(\"A2\").Value = \"Hybrid Workstyle Dashboard Summary View\"\n",
+    "dashboard.Range(\"A3:A4\").ClearContents()\n",
+    "\n",
+    "# Reference Unpivot sheet\n",
+    "unpivot = wb.Sheets(\"Unpivot\")\n",
+    "last_row = unpivot.Cells(unpivot.Rows.Count, 1).End(-4162).Row  # xlUp\n",
+    "last_col = unpivot.Cells(1, unpivot.Columns.Count).End(-4159).Column  # xlToLeft\n",
+    "source_range = unpivot.Range(unpivot.Cells(1, 1), unpivot.Cells(last_row, last_col))\n",
+    "\n",
+    "# Create Pivot Cache\n",
+    "source_address = source_range.GetAddress(RowAbsolute=False, ColumnAbsolute=False)\n",
+    "pivot_cache = wb.PivotCaches().Create(\n",
+    "    SourceType=1,  # xlDatabase\n",
+    "    SourceData=f\"'Unpivot'!{source_address}\"\n",
+    ")\n",
+    "\n",
+    "# Create Pivot Table at row 17\n",
+    "pivot_table = dashboard.PivotTables().Add(\n",
+    "    PivotCache=pivot_cache,\n",
+    "    TableDestination=dashboard.Cells(17, 1),\n",
+    "    TableName=\"HybridPivot\"\n",
+    ")\n",
+    "\n",
+    "# Configure Pivot Table\n",
+    "pivot_table.PivotFields(\"Month\").Orientation = 1  # xlRowField\n",
+    "pivot_table.PivotFields(\"Month\").Position = 1\n",
+    "pivot_table.PivotFields(\"Month\").AutoSort(1, \"Month\")  # xlAscending\n",
+    "\n",
+    "pivot_table.PivotFields(\"Workstyle Met Status\").Orientation = 2  # xlColumnField\n",
+    "pivot_table.PivotFields(\"Workstyle Met Status\").Position = 1\n",
+    "\n",
+    "pivot_table.AddDataField(pivot_table.PivotFields(\"Unique Headcount\"), \"Headcount\", -4112)  # xlCount\n",
+    "\n",
+    "# Remove row totals\n",
+    "pivot_table.RowAxisLayout(1)  # xlTabularRow\n",
+    "pivot_table.ShowDrillIndicators = False\n",
+    "pivot_table.RowGrand = False\n",
+    "\n",
+    "# Add Report Filters instead of slicers\n",
+    "filter_fields = [\"MD Name\", \"BF Level 2 Name\", \"BF Level 3 Name\", \"BF Level 4 Name\"]\n",
+    "for i, field_name in enumerate(filter_fields):\n",
+    "    pf = pivot_table.PivotFields(field_name)\n",
+    "    pf.Orientation = 3  # xlPageField\n",
+    "    pf.Position = i + 1\n",
+    "\n",
+    "# Add formula headers\n",
+    "dashboard.Range(\"G18\").Value = \"%Met\"\n",
+    "dashboard.Range(\"H18\").Value = \"MoM Change%\"\n",
+    "\n",
+    "# Add formulas starting from row 19\n",
+    "row = 19\n",
+    "while dashboard.Cells(row, 2).Value not in [None, \"\"]:\n",
+    "    dashboard.Cells(row, 7).Formula = f'=IF(B{row}=0,\"\",B{row}/F{row})'\n",
+    "    if row == 19:\n",
+    "        dashboard.Cells(row, 8).Value = \"-\"\n",
+    "    else:\n",
+    "        dashboard.Cells(row, 8).Formula = f'=IF(OR(G{row-1}=\"\",G{row}=\"\"),\"\",G{row}-G{row-1})'\n",
+    "    row += 1\n",
+    "\n",
+    "# Format G and H columns as percentage\n",
+    "dashboard.Range(f\"G19:G{row-1}\").NumberFormat = \"0.00%\"\n",
+    "dashboard.Range(f\"H20:H{row-1}\").NumberFormat = \"0.00%\"\n",
+    "\n",
+    "# Optional: Save workbook\n",
+    "# wb.Save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecde96aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed9c232a",
+   "id": "b0eefdc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec8aac40",
+   "id": "a7090dc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de3a579d",
+   "id": "cb384661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "454c2487",
+   "id": "8d3c0e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51b87a55",
+   "id": "14969cc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe47a723",
+   "id": "c312c10c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77cef4c4",
+   "id": "08a4f263",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "922e5c8c",
+   "id": "3f99bfe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0361342c",
+   "id": "908cda1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15d78cd6",
+   "id": "61f3d049",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba3a504",
+   "id": "2cc5b61d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "327bf163",
+   "id": "a3822a17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5aa143d",
+   "id": "e9ed23d3",
    "metadata": {},
    "outputs": [],
    "source": [
