--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db36bdb6",
+   "id": "30270ffb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Great question, Kirti — you should insert that block **immediately after** you assign `\"Workstyle Met Status\"` as the column field in your pivot table setup.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Exact Placement in Your Script\n",
+    "\n",
+    "Find this part of your code:\n",
+    "\n",
+    "```python\n",
+    "pivot_table.PivotFields(\"Workstyle Met Status\").Orientation = 2  # xlColumnField\n",
+    "pivot_table.PivotFields(\"Workstyle Met Status\").Position = 1\n",
+    "```\n",
+    "\n",
+    "Replace it with this **entire block**:\n",
+    "\n",
+    "```python\n",
+    "# Set Workstyle Met Status column field and custom order\n",
+    "col_field = pivot_table.PivotFields(\"Workstyle Met Status\")\n",
+    "col_field.Orientation = 2  # xlColumnField\n",
+    "col_field.Position = 1\n",
+    "\n",
+    "# Force custom order\n",
+    "desired_order = [\"Met\", \"Not Met\", \"Exceeding\", \"Defaulter\"]\n",
+    "for i, item in enumerate(desired_order):\n",
+    "    col_field.PivotItems(item).Position = i + 1\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧠 Why This Works\n",
+    "\n",
+    "- You're assigning the column field (`Orientation = 2`) and its position\n",
+    "- Then you're explicitly reordering the pivot items using `.PivotItems(item).Position`\n",
+    "- This ensures your columns appear in the exact order needed for formulas and layout\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Let me know if you want to dynamically detect column positions for formula placement or add conditional formatting next. You're orchestrating this dashboard like a true automation architect.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "853b3fde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecde96aa",
+   "id": "6db0e329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0eefdc8",
+   "id": "af110f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7090dc3",
+   "id": "12ff0924",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb384661",
+   "id": "39dff0ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d3c0e45",
+   "id": "ee3dd045",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14969cc1",
+   "id": "2dc5d59a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c312c10c",
+   "id": "d32ace2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08a4f263",
+   "id": "75ae937b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f99bfe1",
+   "id": "0ddc4f78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "908cda1b",
+   "id": "d5a324ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61f3d049",
+   "id": "a2475d9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cc5b61d",
+   "id": "b238a4af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3822a17",
+   "id": "b963db48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9ed23d3",
+   "id": "c78a8940",
    "metadata": {},
    "outputs": [],
    "source": [
