--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,54 +3,155 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30270ffb",
+   "id": "9caaee40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Great question, Kirti — you should insert that block **immediately after** you assign `\"Workstyle Met Status\"` as the column field in your pivot table setup.\n",
+    "Thanks, Kirti — here's your fully updated Python script using `win32com.client` that:\n",
+    "\n",
+    "- ✅ Formats the `\"Month\"` field in `mmm-yy` format\n",
+    "- ✅ Merges and styles the title across `A1:H2`\n",
+    "- ✅ Adds filters from row 4 to 8 (including `\"BF Level 1 Name\"`)\n",
+    "- ✅ Moves the pivot to start at row 10\n",
+    "- ✅ Adjusts formula rows accordingly\n",
+    "- ✅ Styles `%Met` and `MoM Change%` headers in `G10:H11` with bold font and themed background\n",
     "\n",
     "---\n",
     "\n",
-    "## ✅ Exact Placement in Your Script\n",
-    "\n",
-    "Find this part of your code:\n",
+    "## 🧾 Final Python Script\n",
     "\n",
     "```python\n",
-    "pivot_table.PivotFields(\"Workstyle Met Status\").Orientation = 2  # xlColumnField\n",
-    "pivot_table.PivotFields(\"Workstyle Met Status\").Position = 1\n",
-    "```\n",
+    "import win32com.client as win32\n",
     "\n",
-    "Replace it with this **entire block**:\n",
+    "excel = win32.gencache.EnsureDispatch(\"Excel.Application\")\n",
+    "excel.Visible = True\n",
     "\n",
-    "```python\n",
+    "# Open your workbook\n",
+    "wb = excel.Workbooks.Open(r\"FULL_PATH_TO_YOUR_FILE.xlsx\")  # Replace with actual path\n",
+    "\n",
+    "# Delete existing Dashboard sheet if present\n",
+    "for sheet in wb.Sheets:\n",
+    "    if sheet.Name == \"Dashboard\":\n",
+    "        sheet.Delete()\n",
+    "        break\n",
+    "\n",
+    "# Add new Dashboard sheet\n",
+    "dashboard = wb.Sheets.Add()\n",
+    "dashboard.Name = \"Dashboard\"\n",
+    "\n",
+    "# Merge and style title across A1:H2\n",
+    "title_range = dashboard.Range(\"A1:H2\")\n",
+    "title_range.Merge()\n",
+    "title_range.Value = \"Hybrid Workstyle Dashboard Summary View\"\n",
+    "title_range.HorizontalAlignment = -4108  # xlCenter\n",
+    "title_range.Font.Bold = True\n",
+    "title_range.Font.Size = 20\n",
+    "title_range.Interior.ThemeColor = 5       # Blue (Accent 1)\n",
+    "title_range.Interior.TintAndShade = 0.8   # Lighter 80%\n",
+    "\n",
+    "# Reference Unpivot sheet\n",
+    "unpivot = wb.Sheets(\"Unpivot\")\n",
+    "last_row = unpivot.Cells(unpivot.Rows.Count, 1).End(-4162).Row\n",
+    "last_col = unpivot.Cells(1, unpivot.Columns.Count).End(-4159).Column\n",
+    "source_range = unpivot.Range(unpivot.Cells(1, 1), unpivot.Cells(last_row, last_col))\n",
+    "\n",
+    "# Create Pivot Cache\n",
+    "source_address = source_range.GetAddress(RowAbsolute=False, ColumnAbsolute=False)\n",
+    "pivot_cache = wb.PivotCaches().Create(\n",
+    "    SourceType=1,\n",
+    "    SourceData=f\"'Unpivot'!{source_address}\"\n",
+    ")\n",
+    "\n",
+    "# Create Pivot Table at row 10\n",
+    "pivot_table = dashboard.PivotTables().Add(\n",
+    "    PivotCache=pivot_cache,\n",
+    "    TableDestination=dashboard.Cells(10, 1),\n",
+    "    TableName=\"HybridPivot\"\n",
+    ")\n",
+    "\n",
+    "# Configure Pivot Table\n",
+    "row_field = pivot_table.PivotFields(\"Month\")\n",
+    "row_field.Orientation = 1  # xlRowField\n",
+    "row_field.Position = 1\n",
+    "row_field.AutoSort(1, \"Month\")  # xlAscending\n",
+    "\n",
+    "# Format Month field to Custom \"mmm-yy\"\n",
+    "dashboard.Columns(1).NumberFormat = \"mmm-yy\"\n",
+    "\n",
     "# Set Workstyle Met Status column field and custom order\n",
     "col_field = pivot_table.PivotFields(\"Workstyle Met Status\")\n",
     "col_field.Orientation = 2  # xlColumnField\n",
     "col_field.Position = 1\n",
     "\n",
-    "# Force custom order\n",
     "desired_order = [\"Met\", \"Not Met\", \"Exceeding\", \"Defaulter\"]\n",
     "for i, item in enumerate(desired_order):\n",
     "    col_field.PivotItems(item).Position = i + 1\n",
+    "\n",
+    "# Add Headcount value\n",
+    "pivot_table.AddDataField(pivot_table.PivotFields(\"Unique Headcount\"), \"Headcount\", -4112)\n",
+    "\n",
+    "# Enable row totals, disable column totals\n",
+    "pivot_table.RowGrand = True\n",
+    "pivot_table.ColumnGrand = False\n",
+    "pivot_table.RowAxisLayout(1)\n",
+    "pivot_table.ShowDrillIndicators = False\n",
+    "\n",
+    "# Add Report Filters (rows 4–8)\n",
+    "filter_fields = [\"MD Name\", \"BF Level 1 Name\", \"BF Level 2 Name\", \"BF Level 3 Name\", \"BF Level 4 Name\"]\n",
+    "for i, field_name in enumerate(filter_fields):\n",
+    "    pf = pivot_table.PivotFields(field_name)\n",
+    "    pf.Orientation = 3  # xlPageField\n",
+    "    pf.Position = i + 1\n",
+    "\n",
+    "# Add formula headers in G10:H11\n",
+    "dashboard.Range(\"G10\").Value = \"%Met\"\n",
+    "dashboard.Range(\"H10\").Value = \"MoM Change%\"\n",
+    "dashboard.Range(\"G11\").Value = \"\"\n",
+    "dashboard.Range(\"H11\").Value = \"\"\n",
+    "\n",
+    "# Style G10:H11\n",
+    "header_range = dashboard.Range(\"G10:H11\")\n",
+    "header_range.Font.Bold = True\n",
+    "header_range.Interior.ThemeColor = 5\n",
+    "header_range.Interior.TintAndShade = 0.8\n",
+    "\n",
+    "# Add formulas starting from row 12\n",
+    "row = 12\n",
+    "while dashboard.Cells(row, 2).Value not in [None, \"\"]:\n",
+    "    dashboard.Cells(row, 7).Formula = f'=IF(B{row}=0,\"\",B{row}/F{row})'\n",
+    "    if row == 12:\n",
+    "        dashboard.Cells(row, 8).Value = \"-\"\n",
+    "    else:\n",
+    "        dashboard.Cells(row, 8).Formula = f'=IF(OR(G{row-1}=\"\",G{row}=\"\"),\"\",G{row}-G{row-1})'\n",
+    "    row += 1\n",
+    "\n",
+    "# Format G and H columns as percentage\n",
+    "dashboard.Range(f\"G12:G{row-1}\").NumberFormat = \"0.00%\"\n",
+    "dashboard.Range(f\"H13:H{row-1}\").NumberFormat = \"0.00%\"\n",
+    "\n",
+    "# Optional: Save workbook\n",
+    "# wb.Save()\n",
     "```\n",
     "\n",
     "---\n",
     "\n",
-    "## 🧠 Why This Works\n",
+    "## 🧠 Summary of Layout\n",
     "\n",
-    "- You're assigning the column field (`Orientation = 2`) and its position\n",
-    "- Then you're explicitly reordering the pivot items using `.PivotItems(item).Position`\n",
-    "- This ensures your columns appear in the exact order needed for formulas and layout\n",
+    "| Section            | Rows Used     |\n",
+    "|--------------------|---------------|\n",
+    "| Title              | A1:H2         |\n",
+    "| Filters            | Row 4–8       |\n",
+    "| Pivot Table        | Starts at Row 10 |\n",
+    "| Formula Headers    | G10:H11       |\n",
+    "| Formulas           | Start at Row 12 |\n",
     "\n",
-    "---\n",
-    "\n",
-    "Let me know if you want to dynamically detect column positions for formula placement or add conditional formatting next. You're orchestrating this dashboard like a true automation architect.\n"
+    "Let me know if you want to add conditional formatting, auto-refresh, or export this dashboard to PDF. You're shaping this dashboard like a true automation architect.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "853b3fde",
+   "id": "6fe4ebb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6db0e329",
+   "id": "94415342",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af110f06",
+   "id": "65d11dcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12ff0924",
+   "id": "4f377760",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39dff0ff",
+   "id": "2c75a619",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee3dd045",
+   "id": "432b6b73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dc5d59a",
+   "id": "31497317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d32ace2d",
+   "id": "d7e4cb44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75ae937b",
+   "id": "974b8320",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ddc4f78",
+   "id": "4fdb46b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5a324ae",
+   "id": "92b37ab7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2475d9e",
+   "id": "ee7b2d7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b238a4af",
+   "id": "a736ccc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b963db48",
+   "id": "2c551063",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c78a8940",
+   "id": "5eca7aff",
    "metadata": {},
    "outputs": [],
    "source": [
