--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9caaee40",
+   "id": "f921ba75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Great question, Kirti — let’s break it down clearly.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🔍 Why Replace Hardcoded `F{row}`\n",
+    "\n",
+    "In your original formula:\n",
+    "\n",
+    "```python\n",
+    "dashboard.Cells(row, 7).Formula = f'=IF(B{row}=0,\"\",B{row}/F{row})'\n",
+    "```\n",
+    "\n",
+    "- `F{row}` assumes that the **Grand Total column** (for headcount) is always in column **F** (i.e., column index 6).\n",
+    "- But once you rename the data field to `\"Total Headcount\"` and/or change the pivot layout, that column might shift — it could move to column G, H, or beyond.\n",
+    "\n",
+    "If you keep using `F{row}`:\n",
+    "- ✅ It works only if the column stays fixed\n",
+    "- ❌ It breaks if the column moves — your formulas will divide by the wrong cell\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Dynamic Fix\n",
+    "\n",
+    "Instead, we **detect the actual column index** of `\"Total Headcount\"` in the pivot header row (row 10), and use that to build the formula:\n",
+    "\n",
+    "```python\n",
+    "# Detect column index of \"Total Headcount\"\n",
+    "headcount_col = None\n",
+    "for col in range(1, dashboard.Columns.Count):\n",
+    "    if dashboard.Cells(10, col).Value == \"Total Headcount\":\n",
+    "        headcount_col = col\n",
+    "        break\n",
+    "```\n",
+    "\n",
+    "Then use that index to build the formula dynamically:\n",
+    "\n",
+    "```python\n",
+    "col_letter = col_letter_function(headcount_col)  # Converts 6 → \"F\", 7 → \"G\", etc.\n",
+    "dashboard.Cells(row, 7).Formula = f'=IF(B{row}=0,\"\",B{row}/{col_letter}{row})'\n",
+    "```\n",
+    "\n",
+    "✅ This ensures your formula always points to the correct column — no matter how the pivot layout changes.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Let me know if you want to apply the same logic to dynamically detect the `\"Met\"` column too. You're future-proofing this dashboard like a true automation architect.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50cfd300",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fe4ebb7",
+   "id": "fe437f4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94415342",
+   "id": "976d7148",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65d11dcc",
+   "id": "2f14c7aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f377760",
+   "id": "e4c11e97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c75a619",
+   "id": "7ad74e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "432b6b73",
+   "id": "95bb6e13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31497317",
+   "id": "82aebde8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7e4cb44",
+   "id": "a2bdfa29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "974b8320",
+   "id": "9dbdd193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fdb46b4",
+   "id": "cc384be7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92b37ab7",
+   "id": "fbbc5af8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee7b2d7d",
+   "id": "39544d24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a736ccc2",
+   "id": "6f713ff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c551063",
+   "id": "fe70bf79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eca7aff",
+   "id": "d4960b41",
    "metadata": {},
    "outputs": [],
    "source": [
