--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f921ba75",
+   "id": "0599f3a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply styling to Flattened and Overall Summary sheets\n",
+    "for sheet_name in [\"Flattened\", \"Overall Summary\"]:\n",
+    "    try:\n",
+    "        sheet = wb.Sheets(sheet_name)\n",
+    "        used_range = sheet.UsedRange\n",
+    "\n",
+    "        # Apply background color to entire used range\n",
+    "        used_range.Interior.ThemeColor = 5       # Blue (Accent 1)\n",
+    "        used_range.Interior.TintAndShade = 0.8    # Lighter 80%\n",
+    "\n",
+    "        # Apply light borders to all cells\n",
+    "        for border_id in range(7, 13):  # xlEdgeLeft to xlInsideHorizontal\n",
+    "            border = used_range.Borders(border_id)\n",
+    "            border.LineStyle = 1        # xlContinuous\n",
+    "            border.ColorIndex = 15      # Light gray\n",
+    "            border.TintAndShade = 0.8\n",
+    "            border.Weight = 2           # xlThin\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Sheet '{sheet_name}' not found or styling failed: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4dcd4a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50cfd300",
+   "id": "c0f7c31f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe437f4b",
+   "id": "0d1aa2f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "976d7148",
+   "id": "462d32c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f14c7aa",
+   "id": "2ddc9ec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4c11e97",
+   "id": "d42082e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ad74e45",
+   "id": "49d54b95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95bb6e13",
+   "id": "7986b0ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82aebde8",
+   "id": "2a168156",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2bdfa29",
+   "id": "3ff36a24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dbdd193",
+   "id": "aa00325a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc384be7",
+   "id": "39347fcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbbc5af8",
+   "id": "e8981ad3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39544d24",
+   "id": "ce1767cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f713ff9",
+   "id": "1e18165f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe70bf79",
+   "id": "772f2fa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4960b41",
+   "id": "764bcbc7",
    "metadata": {},
    "outputs": [],
    "source": [
