--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,21 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0599f3a0",
+   "id": "a1487c0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Apply styling to Flattened and Overall Summary sheets\n",
     "for sheet_name in [\"Flattened\", \"Overall Summary\"]:\n",
     "    try:\n",
     "        sheet = wb.Sheets(sheet_name)\n",
     "        used_range = sheet.UsedRange\n",
     "\n",
-    "        # Apply background color to entire used range\n",
-    "        used_range.Interior.ThemeColor = 5       # Blue (Accent 1)\n",
-    "        used_range.Interior.TintAndShade = 0.8    # Lighter 80%\n",
+    "        # Style first row only\n",
+    "        header_row = sheet.Range(f\"A1:{sheet.Cells(1, used_range.Columns.Count).Address}\")\n",
+    "        header_row.Interior.ThemeColor = 5       # Blue (Accent 1)\n",
+    "        header_row.Interior.TintAndShade = 0.8   # Lighter 80%\n",
+    "        header_row.Font.Bold = True\n",
     "\n",
-    "        # Apply light borders to all cells\n",
+    "        # Apply light borders to all used cells\n",
     "        for border_id in range(7, 13):  # xlEdgeLeft to xlInsideHorizontal\n",
     "            border = used_range.Borders(border_id)\n",
     "            border.LineStyle = 1        # xlContinuous\n",
@@ -25,14 +26,18 @@
     "            border.TintAndShade = 0.8\n",
     "            border.Weight = 2           # xlThin\n",
     "\n",
+    "        # Set column widths to 25\n",
+    "        for col in range(1, used_range.Columns.Count + 1):\n",
+    "            sheet.Columns(col).ColumnWidth = 25\n",
+    "\n",
     "    except Exception as e:\n",
-    "        print(f\"Sheet '{sheet_name}' not found or styling failed: {e}\")"
+    "        print(f\"Sheet '{sheet_name}' styling failed: {e}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4dcd4a1",
+   "id": "c153ef71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0f7c31f",
+   "id": "b1da36e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d1aa2f0",
+   "id": "f94ac95f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "462d32c2",
+   "id": "b2ec9dd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ddc9ec9",
+   "id": "236d2c29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d42082e5",
+   "id": "a84e612f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49d54b95",
+   "id": "dd48b205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7986b0ab",
+   "id": "a5382373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a168156",
+   "id": "1c6aee22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff36a24",
+   "id": "5b178eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa00325a",
+   "id": "89431a01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39347fcb",
+   "id": "82beb705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8981ad3",
+   "id": "12fde073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,7 +1219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce1767cf",
+   "id": "d77ec279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e18165f",
+   "id": "aa510af6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "772f2fa5",
+   "id": "62f4b87f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "764bcbc7",
+   "id": "fb49080f",
    "metadata": {},
    "outputs": [],
    "source": [
