--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1487c0c",
+   "id": "ee6364d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Weekly View Rationale\n",
+    "We shifted from monthly to weekly attendance tracking to improve precision. Weekly granularity helps detect travel behavior — if an employee visits a non-contract office during a regular week, it surfaces as an extra location entry. This supports future logic to distinguish travel vs intentional override (pending input from Phani, Lilian’s team).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d415f6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c153ef71",
+   "id": "85e45487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1da36e7",
+   "id": "2a88e3bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f94ac95f",
+   "id": "bb19fca1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2ec9dd5",
+   "id": "d354b6a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "236d2c29",
+   "id": "0a354573",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a84e612f",
+   "id": "3f64faa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd48b205",
+   "id": "39a3cbdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5382373",
+   "id": "2868b6f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c6aee22",
+   "id": "ff857c09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b178eca",
+   "id": "02f1e369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89431a01",
+   "id": "5ee7612d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82beb705",
+   "id": "e76fe51a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12fde073",
+   "id": "2f53f24e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d77ec279",
+   "id": "880fa8fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa510af6",
+   "id": "efc30035",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62f4b87f",
+   "id": "45551b72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb49080f",
+   "id": "92fc5b10",
    "metadata": {},
    "outputs": [],
    "source": [
