--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,6 +3,108 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6229ca6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.worksheet.datavalidation import DataValidation\n",
+    "\n",
+    "def update_l2_l3_l4_dropdowns(folder_path):\n",
+    "    \"\"\"\n",
+    "    For each Excel file in the folder, updates L2, L3, and L4 View sheets with dropdowns\n",
+    "    based on filtered L2 value from Options sheet.\n",
+    "    \"\"\"\n",
+    "    for file in os.listdir(folder_path):\n",
+    "        if not file.endswith(\".xlsx\"):\n",
+    "            continue\n",
+    "\n",
+    "        file_path = os.path.join(folder_path, file)\n",
+    "        filename = os.path.splitext(file)[0].strip()\n",
+    "\n",
+    "        wb = load_workbook(file_path)\n",
+    "        if not all(sheet in wb.sheetnames for sheet in ['Options', 'L2 View', 'L3 View', 'L4 View']):\n",
+    "            print(f\"⚠️ Skipping {file} — required sheets missing\")\n",
+    "            continue\n",
+    "\n",
+    "        ws_options = wb['Options']\n",
+    "        ws_l2 = wb['L2 View']\n",
+    "        ws_l3 = wb['L3 View']\n",
+    "        ws_l4 = wb['L4 View']\n",
+    "\n",
+    "        # Read full L2-L3-L4 mapping from Options!E:F:G\n",
+    "        l2_l3_l4 = [\n",
+    "            (str(row[4].value).strip(), str(row[5].value).strip(), str(row[6].value).strip())\n",
+    "            for row in ws_options.iter_rows(min_row=2, max_row=ws_options.max_row)\n",
+    "            if row[4].value and str(row[4].value).strip() == filename\n",
+    "        ]\n",
+    "\n",
+    "        if not l2_l3_l4:\n",
+    "            print(f\"⚠️ No L2-L3-L4 match for '{filename}' in {file}\")\n",
+    "            continue\n",
+    "\n",
+    "        # Extract unique L3 and L4 values\n",
+    "        l3_values = sorted(set(t[1] for t in l2_l3_l4 if t[1]))\n",
+    "        l4_values = sorted(set(t[2] for t in l2_l3_l4 if t[2]))\n",
+    "\n",
+    "        # Clear Options!B3:B and C3:C\n",
+    "        for cell in ws_options[\"B\"][2:]:\n",
+    "            cell.value = None\n",
+    "        for cell in ws_options[\"C\"][2:]:\n",
+    "            cell.value = None\n",
+    "\n",
+    "        # Write L3 values to Options!B3:B\n",
+    "        for i, val in enumerate(l3_values, start=3):\n",
+    "            ws_options[f\"B{i}\"] = val\n",
+    "\n",
+    "        # Write L4 values to Options!C3:C\n",
+    "        for i, val in enumerate(l4_values, start=3):\n",
+    "            ws_options[f\"C{i}\"] = val\n",
+    "\n",
+    "        # Update L2 View!B1:C1 with filename\n",
+    "        if ws_l2[\"B1\"].coordinate in ws_l2.merged_cells:\n",
+    "            ws_l2.unmerge_cells(\"B1:C1\")\n",
+    "        ws_l2.merge_cells(\"B1:C1\")\n",
+    "        ws_l2[\"B1\"] = filename\n",
+    "\n",
+    "        # Update L3 View!B1:C1 with dropdown from Options!B3:B\n",
+    "        if ws_l3[\"B1\"].coordinate in ws_l3.merged_cells:\n",
+    "            ws_l3.unmerge_cells(\"B1:C1\")\n",
+    "        ws_l3.merge_cells(\"B1:C1\")\n",
+    "        ws_l3.data_validations.dataValidation.clear()\n",
+    "        dv_l3 = DataValidation(\n",
+    "            type=\"list\",\n",
+    "            formula1=f\"=Options!$B$2:$B${len(l3_values)+2}\",\n",
+    "            showDropDown=False\n",
+    "        )\n",
+    "        dv_l3.prompt = \"Choose L3\"\n",
+    "        dv_l3.error = \"Invalid L3 selection\"\n",
+    "        ws_l3.add_data_validation(dv_l3)\n",
+    "        dv_l3.add(ws_l3[\"B1\"])\n",
+    "\n",
+    "        # Update L4 View!B1:C1 with dropdown from Options!C3:C\n",
+    "        if ws_l4[\"B1\"].coordinate in ws_l4.merged_cells:\n",
+    "            ws_l4.unmerge_cells(\"B1:C1\")\n",
+    "        ws_l4.merge_cells(\"B1:C1\")\n",
+    "        ws_l4.data_validations.dataValidation.clear()\n",
+    "        dv_l4 = DataValidation(\n",
+    "            type=\"list\",\n",
+    "            formula1=f\"=Options!$C$2:$C${len(l4_values)+2}\",\n",
+    "            showDropDown=False\n",
+    "        )\n",
+    "        dv_l4.prompt = \"Choose L4\"\n",
+    "        dv_l4.error = \"Invalid L4 selection\"\n",
+    "        ws_l4.add_data_validation(dv_l4)\n",
+    "        dv_l4.add(ws_l4[\"B1\"])\n",
+    "\n",
+    "        wb.save(file_path)\n",
+    "        print(f\"✅ L2-L3-L4 dropdowns updated in: {file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a4495a70",
    "metadata": {},
    "outputs": [],
